2009-11-20  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        MultiCommandTool should find Command objects automatically instead of with a manual list
        https://bugs.webkit.org/show_bug.cgi?id=31710

        * Scripts/bugzilla-tool:
        * Scripts/modules/multicommandtool.py:
         - Use some wild python-fu to crawl all the known subclasses of Command.

2009-11-20  Adam Barth  <abarth@webkit.org>

        Unreviewed "build" fix.  Added missing import.

        * Scripts/bugzilla-tool:

2009-11-20  Adam Barth  <abarth@webkit.org>

        Unreviewed "build" fix.  I failed to update LandingSequence.test
        properly.

        * Scripts/modules/landingsequence.py:

2009-11-20  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Create LandingSequence as the all-sing, all-dance landing class
        https://bugs.webkit.org/show_bug.cgi?id=31709

        Client can inherit from this class to carefully control exactly which
        steps they wish to have happen in the landing sequence.

        * Scripts/bugzilla-tool:
        * Scripts/modules/landingsequence.py: Added.
        * Scripts/modules/webkitlandingscripts.py: Added.

2009-11-19  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Abstract AbstractPatchProcessingCommand from AbstractPatchLandingCommand
        https://bugs.webkit.org/show_bug.cgi?id=31707

        This is to help when we implement build-attachment.

        * Scripts/bugzilla-tool:

2009-11-19  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Support Qt port in bugzilla-tool
        https://bugs.webkit.org/show_bug.cgi?id=31701

        Now we support building with Qt!

        * Scripts/bugzilla-tool:
        * Scripts/modules/webkitport.py: Added.
        * Scripts/modules/webkitport_unittest.py: Added.
        * Scripts/run-webkit-unittests:

2009-11-19  Zoltan Horvath  <zoltan@webkit.org>

        Reviewed by Adam Barth.
