@@ -1,3 +1,12 @@
+2009-11-20  Alejandro G. Castro  <alex@igalia.com>
+
+        Reviewed by Xan Lopez.
+
+        [GTK] DRT release event does not create the state correctly
+        https://bugs.webkit.org/show_bug.cgi?id=31717
+
+        * WebKitTools/DumpRenderTree/gtk/EventSender.cpp:
+
 2009-11-20  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Adam Barth.
